tests/error/use_after_destructure.vibe
// Test that using a variable after destructuring is an error

struct Point {
    x: i32
    y: i32
}

fn main() -> i32 {
    let p = Point { x: 10, y: 20 }
    let {x, y} = p

    // This should fail - p was moved by destructuring
    let z = p.x

    return 0
}
